[package]
name = "telegram-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A CLI tool to analyze Telegram JSON data, file metadata, etc."
license = "MIT"

[dependencies]
regex = "1.7"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }